plugins {
    id 'java'
    id 'application'

    id("org.javamodularity.moduleplugin") version "1.8.15"
    id("org.openjfx.javafxplugin") version "0.0.13"
    id("org.beryx.jlink") version "2.25.0"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

layout.buildDirectory = file('build_local')

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'org.example.Main'
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    // TEST
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    // HIBERNATE + POSTGRESQL
    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'org.postgresql:postgresql:42.7.3'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
}

tasks.named('run') {
    modularity.inferModulePath = false
}

def isWindows = System.getProperty('os.name').toLowerCase().contains('windows')

tasks.register('upDb', Exec) {
    group = 'application'
    description = 'Inicia PostgreSQL en Docker Compose.'

    if (isWindows) {
        commandLine 'cmd', '/c', 'docker compose up -d'
    } else {
        commandLine 'sh', '-c', 'docker compose up -d'
    }
}

tasks.register('downDb', Exec) {
    group = 'application'
    description = 'Detiene PostgreSQL en Docker Compose.'

    if (isWindows) {
        commandLine 'cmd', '/c', 'docker compose down'
    } else {
        commandLine 'sh', '-c', 'docker compose down'
    }
}

tasks.register('devRun') {
    group = 'application'
    description = 'Levanta la base en Docker y ejecuta la aplicación JavaFX.'
    dependsOn 'upDb', 'run'
}

jlink {
    imageZip = project.layout.buildDirectory.file("distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {name = 'app'}
}